# Zendron-Test

./: .dendron.ws  .markdownlintignore  README.md  dendron.code-workspace  dendron.yml  dendronrc.yml  package-lock.json  pull_request_template.md  pyproject.toml
env/: env-dendron-template.yml
notebooks/: using-my-package.html  using-my-package.ipynb
notes/: Paper.md  chatGPT.commands.md  chatGPT.conversation.conda-env-yaml-output.md  outline.01.md  outline.md  paper.Abstract.md  paper.Conclusion.md  paper.Introduction.md  paper.Results-and-Discussion.md  paper.methods.md  paper.results-and-discussion.1.md  paper.results-and-discussion.2.md  paper.results-and-discussion.3.md  paper.results-and-discussion.4.md  paper.results-and-discussion.5.md  paper.results-and-discussion.6.md  paper.supplementary.md  paper.title.md  publish.md  publish.pdf.md  publish.word.md  root.md  user.Mjvolk3.md  user.Mjvolk3.tasks.future.md  user.Mjvolk3.tasks.md  vscode.extensions.md  workspace.tutorial.md
notes/assets/bib/: bib.bib  bib_fix.bib
notes/assets/latex-paper/scribe_template/: color-edits.sty  scribe-template.aux  scribe-template.fdb_latexmk  scribe-template.fls  scribe-template.out  scribe-template.tex
src/my_package/: __main__.py  first_module.py
src/my_package.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
